--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -27,10 +27,18 @@ dist.dir=dist
 dist.jar=${dist.dir}/metatrip2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itextpdf-5.5.9.jar=..\\..\\..\\..\\itextpdf-5.5.9.jar
+file.reference.qrgen-1.0.jar=..\\..\\..\\..\\lib\\qrgen-1.0.jar
+file.reference.zxing-core-1.7.jar=..\\..\\..\\..\\lib\\zxing-core-1.7.jar
+file.reference.zxing-j2se-1.7.jar=..\\..\\..\\..\\lib\\zxing-j2se-1.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.zxing-j2se-1.7.jar}:\
+    ${file.reference.zxing-core-1.7.jar}:\
+    ${file.reference.qrgen-1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
