--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.jar=${dist.dir}/metatrip2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.itextpdf-5.5.9.jar=..\\..\\..\\..\\itextpdf-5.5.9.jar
+file.reference.javax.mail.jar=..\\..\\..\\..\\javax.mail.jar
+file.reference.medal-Downloads=..\\..\\..\\..\\..\\..\\Downloads
 file.reference.qrgen-1.0.jar=..\\..\\..\\..\\lib\\qrgen-1.0.jar
 file.reference.zxing-core-1.7.jar=..\\..\\..\\..\\lib\\zxing-core-1.7.jar
 file.reference.zxing-j2se-1.7.jar=..\\..\\..\\..\\lib\\zxing-j2se-1.7.jar
@@ -38,7 +40,9 @@ javac.classpath=\
     ${file.reference.itextpdf-5.5.9.jar}:\
     ${file.reference.zxing-j2se-1.7.jar}:\
     ${file.reference.zxing-core-1.7.jar}:\
-    ${file.reference.qrgen-1.0.jar}
+    ${file.reference.qrgen-1.0.jar}:\
+    ${file.reference.medal-Downloads}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
