--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -27,12 +27,20 @@ dist.dir=dist
 dist.jar=${dist.dir}/metatrip2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-logging-1.2.jar=..\\..\\..\\..\\commons-logging-1.2.jar
+file.reference.fontbox-2.0.25.jar=..\\..\\..\\..\\fontbox-2.0.25.jar
+file.reference.io-7.0.3.jar=..\\..\\..\\..\\io-7.0.3.jar
 file.reference.itextpdf-5.5.9.jar=..\\..\\..\\..\\itextpdf-5.5.9.jar
 file.reference.javax.mail.jar=..\\..\\..\\..\\javax.mail.jar
 file.reference.medal-Downloads=..\\..\\..\\..\\..\\..\\Downloads
+file.reference.pdfbox-1.3.1.jar=..\\..\\..\\..\\pdfbox-1.3.1.jar
+file.reference.pdfbox-2.0.25.jar=..\\..\\..\\..\\pdfbox-2.0.25.jar
 file.reference.qrgen-1.0.jar=..\\..\\..\\..\\lib\\qrgen-1.0.jar
+file.reference.simple-pdf-writer-1.0.0.jar=..\\..\\..\\..\\simple-pdf-writer-1.0.0.jar
+file.reference.slf4j-api-1.7.13.jar=..\\..\\..\\..\\slf4j-api-1.7.13.jar
 file.reference.zxing-core-1.7.jar=..\\..\\..\\..\\lib\\zxing-core-1.7.jar
 file.reference.zxing-j2se-1.7.jar=..\\..\\..\\..\\lib\\zxing-j2se-1.7.jar
+file.reference.zxing.jar=..\\..\\..\\..\\zxing.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -42,7 +50,15 @@ javac.classpath=\
     ${file.reference.zxing-core-1.7.jar}:\
     ${file.reference.qrgen-1.0.jar}:\
     ${file.reference.medal-Downloads}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.zxing.jar}:\
+    ${file.reference.pdfbox-2.0.25.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.fontbox-2.0.25.jar}:\
+    ${file.reference.pdfbox-1.3.1.jar}:\
+    ${file.reference.simple-pdf-writer-1.0.0.jar}:\
+    ${file.reference.slf4j-api-1.7.13.jar}:\
+    ${file.reference.io-7.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
