--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/metatrip2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jar_files.zip=C:\\Users\\FLAM\\Desktop\\jar_files.zip
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jar_files.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
