double fixed & bd updated & crud graphic & code qr /pdf & jar

--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -36,7 +36,8 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jar_files.zip}:\
     ${libs.zz.classpath}:\
-    ${libs.stripe.classpath}
+    ${libs.stripe.classpath}:\
+    ${libs.itextpdf.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
