--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -32,6 +32,8 @@ file.reference.fontbox-2.0.25.jar=..\\..\\..\\..\\fontbox-2.0.25.jar
 file.reference.io-7.0.3.jar=..\\..\\..\\..\\io-7.0.3.jar
 file.reference.itextpdf-5.5.9.jar=..\\..\\..\\..\\itextpdf-5.5.9.jar
 file.reference.javax.mail.jar=..\\..\\..\\..\\javax.mail.jar
+file.reference.jxmaps-1.3.2.jar=..\\..\\..\\..\\jxmaps-1.3.2.jar
+file.reference.jxmaps-win-1.3.2.jar=..\\..\\..\\..\\jxmaps-win-1.3.2.jar
 file.reference.medal-Downloads=..\\..\\..\\..\\..\\..\\Downloads
 file.reference.pdfbox-1.3.1.jar=..\\..\\..\\..\\pdfbox-1.3.1.jar
 file.reference.pdfbox-2.0.25.jar=..\\..\\..\\..\\pdfbox-2.0.25.jar
@@ -58,7 +60,9 @@ javac.classpath=\
     ${file.reference.pdfbox-1.3.1.jar}:\
     ${file.reference.simple-pdf-writer-1.0.0.jar}:\
     ${file.reference.slf4j-api-1.7.13.jar}:\
-    ${file.reference.io-7.0.3.jar}
+    ${file.reference.io-7.0.3.jar}:\
+    ${file.reference.jxmaps-1.3.2.jar}:\
+    ${file.reference.jxmaps-win-1.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
