--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -47,12 +47,16 @@ file.reference.fontbox-2.0.25.jar=..\\..\\..\\..\\fontbox-2.0.25.jar
 file.reference.io-7.0.3.jar=..\\..\\..\\..\\io-7.0.3.jar
 file.reference.itextpdf-5.5.9.jar=..\\..\\..\\..\\itextpdf-5.5.9.jar
 file.reference.itextpdf-5.5.9.jar-1=..\\..\\..\\..\\Librairies\\itextpdf-5.5.9.jar
+file.reference.itextpdf-5.5.9.jar-2=C:\\Users\\FLAM\\Desktop\\itextpdf-5.5.9.jar
+file.reference.itextPdf.zip=C:\\Users\\FLAM\\Desktop\\itextPdf.zip
 file.reference.jai-imageio-core-1.4.0.jar=..\\jar_files (1)\\jai-imageio-core-1.4.0.jar
 file.reference.jai-imageio-core-1.4.0.jar-1=..\\..\\..\\..\\Librairies\\jai-imageio-core-1.4.0.jar
+file.reference.jar_files__1_.zip=C:\\Users\\FLAM\\Desktop\\jar_files (1).zip
 file.reference.javase-3.4.0.jar=..\\jar_files (1)\\javase-3.4.0.jar
 file.reference.javase-3.4.0.jar-1=..\\..\\..\\..\\Librairies\\javase-3.4.0.jar
 file.reference.javax.mail.jar=..\\..\\..\\..\\javax.mail.jar
 file.reference.javax.mail.jar-1=..\\..\\..\\..\\backup\\MetaTrip_Java\\MetaTrip_Java\\metaFinal\\src\\javax.mail.jar
+file.reference.javax.mail.jar-2=C:\\Users\\FLAM\\Desktop\\javax.mail.jar
 file.reference.jcommander-1.72.jar=..\\jar_files (1)\\jcommander-1.72.jar
 file.reference.jcommander-1.72.jar-1=..\\..\\..\\..\\Librairies\\jcommander-1.72.jar
 file.reference.jxmaps-1.3.2.jar=..\\..\\..\\..\\jxmaps-1.3.2.jar
@@ -60,7 +64,9 @@ file.reference.jxmaps-win-1.3.2.jar=..\\..\\..\\..\\jxmaps-win-1.3.2.jar
 file.reference.medal-Downloads=..\\..\\..\\..\\..\\..\\Downloads
 file.reference.openjfx-dialogs-1.0.3.jar=..\\..\\..\\..\\..\\..\\Videos\\openjfx-dialogs-1.0.3.jar
 file.reference.pdfbox-1.3.1.jar=..\\..\\..\\..\\pdfbox-1.3.1.jar
+file.reference.pdfbox-1.3.1.jar-1=C:\\Users\\FLAM\\Desktop\\Librairies\\pdfbox-1.3.1.jar
 file.reference.pdfbox-2.0.25.jar=..\\..\\..\\..\\pdfbox-2.0.25.jar
+file.reference.pdfbox-2.0.25.jar-1=C:\\Users\\FLAM\\Desktop\\Librairies\\pdfbox-2.0.25.jar
 file.reference.qrgen-1.0.jar=..\\..\\..\\..\\lib\\qrgen-1.0.jar
 file.reference.simple-pdf-writer-1.0.0.jar=..\\..\\..\\..\\simple-pdf-writer-1.0.0.jar
 file.reference.slf4j-api-1.7.13.jar=..\\..\\..\\..\\slf4j-api-1.7.13.jar
@@ -124,7 +130,14 @@ javac.classpath=\
     ${file.reference.jcommander-1.72.jar-1}:\
     ${file.reference.slf4j-api-1.7.5.jar-1}:\
     ${file.reference.text-ui-0.0.2.jar-1}:\
-    ${file.reference.zxing-1.1.1.jar-1}
+    ${file.reference.zxing-1.1.1.jar-1}:\
+    ${file.reference.itextpdf-5.5.9.jar-2}:\
+    ${file.reference.javax.mail.jar-2}:\
+    ${file.reference.jar_files__1_.zip}:\
+    ${file.reference.itextPdf.zip}:\
+    ${file.reference.jar_files.zip}:\
+    ${file.reference.pdfbox-1.3.1.jar-1}:\
+    ${file.reference.pdfbox-2.0.25.jar-1}
     ${file.reference.itextpdf-5.5.9.jar}:\
     ${file.reference.zxing-j2se-1.7.jar}:\
     ${file.reference.zxing-core-1.7.jar}:\
