correction datepicker partie reservation V & gestion des roles

--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -116,7 +116,8 @@ javac.classpath=\
     ${file.reference.jcommander-1.72.jar-1}:\
     ${file.reference.slf4j-api-1.7.5.jar-1}:\
     ${file.reference.text-ui-0.0.2.jar-1}:\
-    ${file.reference.zxing-1.1.1.jar-1}
+    ${file.reference.zxing-1.1.1.jar-1}:\
+    ${file.reference.javax.mail.jar}
     ${file.reference.itextpdf-5.5.9.jar}:\
     ${file.reference.zxing-j2se-1.7.jar}:\
     ${file.reference.zxing-core-1.7.jar}:\
