--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -53,8 +53,11 @@ file.reference.javax.mail.jar=..\\..\\..\\..\\javax.mail.jar
 file.reference.javax.mail.jar-1=..\\..\\..\\..\\backup\\MetaTrip_Java\\MetaTrip_Java\\metaFinal\\src\\javax.mail.jar
 file.reference.jcommander-1.72.jar=..\\jar_files (1)\\jcommander-1.72.jar
 file.reference.jcommander-1.72.jar-1=..\\..\\..\\..\\Librairies\\jcommander-1.72.jar
+file.reference.jxmaps-1.3.1.jar=..\\..\\..\\..\\..\\..\\Videos\\Captures\\lib\\jxmaps-1.3.1.jar
 file.reference.jxmaps-1.3.2.jar=..\\..\\..\\..\\jxmaps-1.3.2.jar
+file.reference.jxmaps-win-1.3.1.jar=..\\..\\..\\..\\..\\..\\Videos\\Captures\\lib\\jxmaps-win-1.3.1.jar
 file.reference.jxmaps-win-1.3.2.jar=..\\..\\..\\..\\jxmaps-win-1.3.2.jar
+file.reference.jxmapsdemo.jar=..\\..\\..\\..\\..\\..\\Videos\\Captures\\demo\\jxmapsdemo.jar
 file.reference.medal-Downloads=..\\..\\..\\..\\..\\..\\Downloads
 file.reference.openjfx-dialogs-1.0.3.jar=..\\..\\..\\..\\..\\..\\Videos\\openjfx-dialogs-1.0.3.jar
 file.reference.pdfbox-1.3.1.jar=..\\..\\..\\..\\pdfbox-1.3.1.jar
@@ -117,7 +120,10 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.7.5.jar-1}:\
     ${file.reference.text-ui-0.0.2.jar-1}:\
     ${file.reference.zxing-1.1.1.jar-1}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jxmaps-1.3.1.jar}:\
+    ${file.reference.jxmaps-win-1.3.1.jar}:\
+    ${file.reference.jxmapsdemo.jar}
     ${file.reference.itextpdf-5.5.9.jar}:\
     ${file.reference.zxing-j2se-1.7.jar}:\
     ${file.reference.zxing-core-1.7.jar}:\
