api sms +api mailing +api notification

--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -27,10 +27,18 @@ dist.dir=dist
 dist.jar=${dist.dir}/metatrip2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.javax.mail-1.6.2.jar=C:\\Users\\Mortadha\\Downloads\\open-quantum\\dist\\lib\\javax.mail-1.6.2.jar
+file.reference.TrayNotification.jar=C:\\Users\\Mortadha\\Desktop\\Programming\\PiDev\\Jvalib\\TrayNotification.jar
+file.reference.TrayNotification.jar-1=C:\\Users\\Nayrouz\\Documents\\NetBeansProjects\\lib\\TrayNotification.jar
+file.reference.twilio-8.9.0-jar-with-dependencies.jar=C:\\Users\\Nayrouz\\Downloads\\twilio-8.9.0-jar-with-dependencies.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.TrayNotification.jar}:\
+    ${file.reference.TrayNotification.jar-1}:\
+    ${file.reference.twilio-8.9.0-jar-with-dependencies.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
