--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -33,45 +33,90 @@ excludes=
 file.reference.banner-1.0.2.jar=..\\jar_files (1)\\banner-1.0.2.jar
 file.reference.banner-1.0.2.jar-1=..\\..\\..\\..\\Librairies\\banner-1.0.2.jar
 file.reference.banner-1.0.2.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\banner-1.0.2.jar
+file.reference.banner-1.0.2.jar-3=..\\..\\..\\..\\..\\MetaTrip_Java-flam\\jar_files (1)\\banner-1.0.2.jar
+file.reference.banner-1.0.2.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\banner-1.0.2.jar
+file.reference.commons-beanutils-1.9.4.jar=..\\jar_files (1)\\commons-beanutils-1.9.4.jar
+file.reference.commons-beanutils-1.9.4.jar-1=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-beanutils-1.9.4.jar
+file.reference.commons-codec-1.15.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-codec-1.15.jar
+file.reference.commons-codec-1.5.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-codec-1.5.jar
+file.reference.commons-collections-3.2.2.jar=..\\jar_files (1)\\commons-collections-3.2.2.jar
+file.reference.commons-collections-3.2.2.jar-1=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-collections-3.2.2.jar
 file.reference.commons-collections4-4.1.jar=..\\jar_files (1)\\commons-collections4-4.1.jar
 file.reference.commons-collections4-4.1.jar-1=..\\..\\..\\..\\Librairies\\commons-collections4-4.1.jar
 file.reference.commons-collections4-4.1.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-3=..\\..\\..\\..\\..\\MetaTrip_Java-flam\\jar_files (1)\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.4.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.21.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-compress-1.21.jar
+file.reference.commons-digester-2.1.jar=..\\jar_files (1)\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-digester-2.1.jar
+file.reference.commons-io-2.11.0.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-io-2.11.0.jar
 file.reference.commons-io-2.5.jar=..\\jar_files (1)\\commons-io-2.5.jar
 file.reference.commons-io-2.5.jar-1=..\\..\\..\\..\\Librairies\\commons-io-2.5.jar
 file.reference.commons-io-2.5.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\commons-io-2.5.jar
+file.reference.commons-io-2.5.jar-3=..\\..\\..\\..\\..\\MetaTrip_Java-flam\\jar_files (1)\\commons-io-2.5.jar
+file.reference.commons-io-2.5.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-io-2.5.jar
 file.reference.commons-lang3-3.6.jar=..\\jar_files (1)\\commons-lang3-3.6.jar
 file.reference.commons-lang3-3.6.jar-1=..\\..\\..\\..\\Librairies\\commons-lang3-3.6.jar
 file.reference.commons-lang3-3.6.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\commons-lang3-3.6.jar
+file.reference.commons-lang3-3.6.jar-3=..\\..\\..\\..\\..\\MetaTrip_Java-flam\\jar_files (1)\\commons-lang3-3.6.jar
+file.reference.commons-lang3-3.6.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-lang3-3.6.jar
 file.reference.commons-logging-1.2.jar=..\\..\\..\\..\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=..\\jar_files (1)\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-2=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-logging-1.2.jar
+file.reference.commons-math3-3.6.1.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-math3-3.6.1.jar
+file.reference.commons-validator-1.7.jar=..\\jar_files (1)\\commons-validator-1.7.jar
+file.reference.commons-validator-1.7.jar-1=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\commons-validator-1.7.jar
+file.reference.controlsfx-8.40.11.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\controlsfx-8.40.11.jar
 file.reference.core-3.4.0.jar=..\\jar_files (1)\\core-3.4.0.jar
 file.reference.core-3.4.0.jar-1=..\\..\\..\\..\\Librairies\\core-3.4.0.jar
 file.reference.core-3.4.0.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\core-3.4.0.jar
+file.reference.core-3.4.0.jar-3=..\\..\\..\\..\\..\\MetaTrip_Java-flam\\jar_files (1)\\core-3.4.0.jar
+file.reference.core-3.4.0.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\core-3.4.0.jar
+file.reference.curvesapi-1.06.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\curvesapi-1.06.jar
 file.reference.fontbox-2.0.25.jar=..\\..\\..\\..\\fontbox-2.0.25.jar
 file.reference.io-7.0.3.jar=..\\..\\..\\..\\io-7.0.3.jar
 file.reference.itextpdf-5.5.9.jar=..\\..\\..\\..\\itextpdf-5.5.9.jar
 file.reference.itextpdf-5.5.9.jar-1=..\\..\\..\\..\\Librairies\\itextpdf-5.5.9.jar
 file.reference.itextpdf-5.5.9.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\itextpdf-5.5.9.jar
 file.reference.itextpdf-5.5.9.jar-3=..\\jar_files (1)\\itextpdf-5.5.9.jar
+file.reference.itextpdf-5.5.9.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\itextpdf-5.5.9.jar
 file.reference.jai-imageio-core-1.4.0.jar=..\\jar_files (1)\\jai-imageio-core-1.4.0.jar
 file.reference.jai-imageio-core-1.4.0.jar-1=..\\..\\..\\..\\Librairies\\jai-imageio-core-1.4.0.jar
 file.reference.jai-imageio-core-1.4.0.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\jai-imageio-core-1.4.0.jar
+file.reference.jai-imageio-core-1.4.0.jar-3=..\\..\\..\\..\\..\\MetaTrip_Java-flam\\jar_files (1)\\jai-imageio-core-1.4.0.jar
+file.reference.jai-imageio-core-1.4.0.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\jai-imageio-core-1.4.0.jar
 file.reference.javase-3.4.0.jar=..\\jar_files (1)\\javase-3.4.0.jar
 file.reference.javase-3.4.0.jar-1=..\\..\\..\\..\\Librairies\\javase-3.4.0.jar
 file.reference.javase-3.4.0.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\javase-3.4.0.jar
+file.reference.javase-3.4.0.jar-3=..\\..\\..\\..\\..\\MetaTrip_Java-flam\\jar_files (1)\\javase-3.4.0.jar
+file.reference.javase-3.4.0.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\javase-3.4.0.jar
 file.reference.javax.mail-1.6.2.jar=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\javax.mail-1.6.2.jar
+file.reference.javax.mail-1.6.2.jar-1=..\\jar_files (1)\\javax.mail-1.6.2.jar
+file.reference.javax.mail-1.6.2.jar-2=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\javax.mail-1.6.2.jar
 file.reference.javax.mail.jar=..\\..\\..\\..\\javax.mail.jar
 file.reference.javax.mail.jar-1=..\\..\\..\\..\\backup\\MetaTrip_Java\\MetaTrip_Java\\metaFinal\\src\\javax.mail.jar
 file.reference.javax.mail.jar-2=..\\jar_files (1)\\javax.mail.jar
+file.reference.javax.mail.jar-3=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\javax.mail.jar
 file.reference.jcommander-1.72.jar=..\\jar_files (1)\\jcommander-1.72.jar
 file.reference.jcommander-1.72.jar-1=..\\..\\..\\..\\Librairies\\jcommander-1.72.jar
 file.reference.jcommander-1.72.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\jcommander-1.72.jar
+file.reference.jcommander-1.72.jar-3=..\\..\\..\\..\\..\\MetaTrip_Java-flam\\jar_files (1)\\jcommander-1.72.jar
+file.reference.jcommander-1.72.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\jcommander-1.72.jar
 file.reference.jxmaps-1.3.2.jar=..\\..\\..\\..\\jxmaps-1.3.2.jar
 file.reference.jxmaps-win-1.3.2.jar=..\\..\\..\\..\\jxmaps-win-1.3.2.jar
+file.reference.log4j-api-2.17.1.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\log4j-api-2.17.1.jar
 file.reference.medal-Downloads=..\\..\\..\\..\\..\\..\\Downloads
+file.reference.NotificationAPI.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\NotificationAPI.jar
 file.reference.openjfx-dialogs-1.0.3.jar=..\\..\\..\\..\\..\\..\\Videos\\openjfx-dialogs-1.0.3.jar
 file.reference.pdfbox-1.3.1.jar=..\\..\\..\\..\\pdfbox-1.3.1.jar
 file.reference.pdfbox-2.0.25.jar=..\\..\\..\\..\\pdfbox-2.0.25.jar
 file.reference.pdfbox-app-3.0.0-alpha2.jar=..\\jar_files (1)\\pdfbox-app-3.0.0-alpha2.jar
+file.reference.pdfbox-app-3.0.0-alpha2.jar-1=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\pdfbox-app-3.0.0-alpha2.jar
+file.reference.poi-3.8-beta4.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\poi-3.8-beta4.jar
+file.reference.poi-5.2.0.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\poi-5.2.0.jar
+file.reference.poi-ooxml-5.2.0.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\poi-ooxml-5.2.0.jar
+file.reference.poi-ooxml-lite-5.2.0.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\poi-ooxml-lite-5.2.0.jar
 file.reference.qrgen-1.0.jar=..\\..\\..\\..\\lib\\qrgen-1.0.jar
 file.reference.simple-pdf-writer-1.0.0.jar=..\\..\\..\\..\\simple-pdf-writer-1.0.0.jar
 file.reference.slf4j-api-1.7.13.jar=..\\..\\..\\..\\slf4j-api-1.7.13.jar
@@ -79,12 +124,22 @@ file.reference.slf4j-api-1.7.23.jar=..\\..\\..\\..\\..\\..\\Videos\\slf4j-api-1.
 file.reference.slf4j-api-1.7.5.jar=..\\jar_files (1)\\slf4j-api-1.7.5.jar
 file.reference.slf4j-api-1.7.5.jar-1=..\\..\\..\\..\\Librairies\\slf4j-api-1.7.5.jar
 file.reference.slf4j-api-1.7.5.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\slf4j-api-1.7.5.jar
+file.reference.slf4j-api-1.7.5.jar-3=..\\..\\..\\..\\..\\MetaTrip_Java-flam\\jar_files (1)\\slf4j-api-1.7.5.jar
+file.reference.slf4j-api-1.7.5.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\slf4j-api-1.7.5.jar
+file.reference.SparseBitSet-1.2.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\SparseBitSet-1.2.jar
 file.reference.text-ui-0.0.2.jar=..\\jar_files (1)\\text-ui-0.0.2.jar
 file.reference.text-ui-0.0.2.jar-1=..\\..\\..\\..\\Librairies\\text-ui-0.0.2.jar
 file.reference.text-ui-0.0.2.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\text-ui-0.0.2.jar
+file.reference.text-ui-0.0.2.jar-3=..\\..\\..\\..\\..\\MetaTrip_Java-flam\\jar_files (1)\\text-ui-0.0.2.jar
+file.reference.text-ui-0.0.2.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\text-ui-0.0.2.jar
+file.reference.TrayNotification.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\TrayNotification.jar
+file.reference.TrayTester.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\TrayTester.jar
+file.reference.xmlbeans-5.0.3.jar=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\xmlbeans-5.0.3.jar
 file.reference.zxing-1.1.1.jar=..\\jar_files (1)\\zxing-1.1.1.jar
 file.reference.zxing-1.1.1.jar-1=..\\..\\..\\..\\Librairies\\zxing-1.1.1.jar
 file.reference.zxing-1.1.1.jar-2=..\\..\\..\\Pi-Backup\\backup_2\\MetaTrip_Java\\jar_files (1)\\zxing-1.1.1.jar
+file.reference.zxing-1.1.1.jar-3=..\\..\\..\\..\\..\\MetaTrip_Java-flam\\jar_files (1)\\zxing-1.1.1.jar
+file.reference.zxing-1.1.1.jar-4=..\\..\\..\\..\\..\\JAWHABEHY\\ZARGA\\MetaTrip_Java\\jar_files (1)\\zxing-1.1.1.jar
 file.reference.zxing-core-1.7.jar=..\\..\\..\\..\\lib\\zxing-core-1.7.jar
 file.reference.zxing-j2se-1.7.jar=..\\..\\..\\..\\lib\\zxing-j2se-1.7.jar
 file.reference.zxing.jar=..\\..\\..\\..\\zxing.jar
@@ -148,7 +203,62 @@ javac.classpath=\
     ${file.reference.zxing-1.1.1.jar-2}:\
     ${file.reference.pdfbox-app-3.0.0-alpha2.jar}:\
     ${file.reference.itextpdf-5.5.9.jar-3}:\
-    ${file.reference.javax.mail.jar-2}
+    ${file.reference.javax.mail.jar-2}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.commons-validator-1.7.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar-1}:\
+    ${file.reference.banner-1.0.2.jar-3}:\
+    ${file.reference.commons-collections4-4.1.jar-3}:\
+    ${file.reference.commons-io-2.5.jar-3}:\
+    ${file.reference.commons-lang3-3.6.jar-3}:\
+    ${file.reference.core-3.4.0.jar-3}:\
+    ${file.reference.jai-imageio-core-1.4.0.jar-3}:\
+    ${file.reference.javase-3.4.0.jar-3}:\
+    ${file.reference.jcommander-1.72.jar-3}:\
+    ${file.reference.slf4j-api-1.7.5.jar-3}:\
+    ${file.reference.text-ui-0.0.2.jar-3}:\
+    ${file.reference.zxing-1.1.1.jar-3}:\
+    ${file.reference.banner-1.0.2.jar-4}:\
+    ${file.reference.commons-beanutils-1.9.4.jar-1}:\
+    ${file.reference.commons-codec-1.5.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar-1}:\
+    ${file.reference.commons-collections4-4.1.jar-4}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-io-2.5.jar-4}:\
+    ${file.reference.commons-lang3-3.6.jar-4}:\
+    ${file.reference.commons-logging-1.2.jar-2}:\
+    ${file.reference.commons-validator-1.7.jar-1}:\
+    ${file.reference.core-3.4.0.jar-4}:\
+    ${file.reference.itextpdf-5.5.9.jar-4}:\
+    ${file.reference.jai-imageio-core-1.4.0.jar-4}:\
+    ${file.reference.javase-3.4.0.jar-4}:\
+    ${file.reference.javax.mail-1.6.2.jar-2}:\
+    ${file.reference.javax.mail.jar-3}:\
+    ${file.reference.jcommander-1.72.jar-4}:\
+    ${file.reference.pdfbox-app-3.0.0-alpha2.jar-1}:\
+    ${file.reference.poi-3.8-beta4.jar}:\
+    ${file.reference.slf4j-api-1.7.5.jar-4}:\
+    ${file.reference.text-ui-0.0.2.jar-4}:\
+    ${file.reference.zxing-1.1.1.jar-4}:\
+    ${file.reference.poi-5.2.0.jar}:\
+    ${file.reference.SparseBitSet-1.2.jar}:\
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.curvesapi-1.06.jar}:\
+    ${file.reference.log4j-api-2.17.1.jar}:\
+    ${file.reference.poi-ooxml-5.2.0.jar}:\
+    ${file.reference.poi-ooxml-lite-5.2.0.jar}:\
+    ${file.reference.xmlbeans-5.0.3.jar}:\
+    ${file.reference.NotificationAPI.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.TrayNotification.jar}:\
+    ${file.reference.TrayTester.jar}
     ${file.reference.itextpdf-5.5.9.jar}:\
     ${file.reference.zxing-j2se-1.7.jar}:\
     ${file.reference.zxing-core-1.7.jar}:\
