--- a/metaFinal/nbproject/project.properties
+++ b/metaFinal/nbproject/project.properties
@@ -59,8 +59,11 @@ file.reference.javax.mail.jar-1=..\\..\\..\\..\\backup\\MetaTrip_Java\\MetaTrip_
 file.reference.javax.mail.jar-2=C:\\Users\\FLAM\\Desktop\\javax.mail.jar
 file.reference.jcommander-1.72.jar=..\\jar_files (1)\\jcommander-1.72.jar
 file.reference.jcommander-1.72.jar-1=..\\..\\..\\..\\Librairies\\jcommander-1.72.jar
+file.reference.jxmaps-1.3.1.jar=C:\\Users\\FLAM\\Desktop\\jxmaps-1.3.1.jar
 file.reference.jxmaps-1.3.2.jar=..\\..\\..\\..\\jxmaps-1.3.2.jar
+file.reference.jxmaps-win-1.3.1.jar=C:\\Users\\FLAM\\Desktop\\jxmaps-win-1.3.1.jar
 file.reference.jxmaps-win-1.3.2.jar=..\\..\\..\\..\\jxmaps-win-1.3.2.jar
+file.reference.jxmapsdemo.jar=C:\\Users\\FLAM\\Desktop\\jxmapsdemo.jar
 file.reference.medal-Downloads=..\\..\\..\\..\\..\\..\\Downloads
 file.reference.openjfx-dialogs-1.0.3.jar=..\\..\\..\\..\\..\\..\\Videos\\openjfx-dialogs-1.0.3.jar
 file.reference.pdfbox-1.3.1.jar=..\\..\\..\\..\\pdfbox-1.3.1.jar
@@ -137,7 +140,10 @@ javac.classpath=\
     ${file.reference.itextPdf.zip}:\
     ${file.reference.jar_files.zip}:\
     ${file.reference.pdfbox-1.3.1.jar-1}:\
-    ${file.reference.pdfbox-2.0.25.jar-1}
+    ${file.reference.pdfbox-2.0.25.jar-1}:\
+    ${file.reference.jxmaps-1.3.1.jar}:\
+    ${file.reference.jxmaps-win-1.3.1.jar}:\
+    ${file.reference.jxmapsdemo.jar}
     ${file.reference.itextpdf-5.5.9.jar}:\
     ${file.reference.zxing-j2se-1.7.jar}:\
     ${file.reference.zxing-core-1.7.jar}:\
